added createArticle and getArticles and deleteArticle and tests
