# backend/src/main/java/io/github/ctrl_alt_elite/hackathon/controllers/ArticlesApiController.java
@@ -1,12 +1,14 @@
 package io.github.ctrl_alt_elite.hackathon.controllers;
 
 import io.github.ctrl_alt_elite.hackathon.dto.ArticleDTO;
-
+import io.github.ctrl_alt_elite.hackathon.security.JwtTokenProvider;
+import io.github.ctrl_alt_elite.hackathon.service.ArticleService;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -32,10 +34,14 @@ import jakarta.annotation.Generated;
 public class ArticlesApiController implements ArticlesApi {
 
     private final NativeWebRequest request;
+    private final ArticleService service;
+    private final JwtTokenProvider provider;
 
     @Autowired
-    public ArticlesApiController(NativeWebRequest request) {
+    public ArticlesApiController(NativeWebRequest request, ArticleService service, JwtTokenProvider provider) {
         this.request = request;
+        this.service = service;
+        this.provider = provider;
     }
 
     @Override
@@ -45,20 +51,35 @@ public class ArticlesApiController implements ArticlesApi {
 
     @Override
     public ResponseEntity<Void> createArticle(@Valid ArticleDTO articleDTO) {
-        // TODO Auto-generated method stub
-        return ArticlesApi.super.createArticle(articleDTO);
+        service.createArticle(articleDTO.author(getAuthor()));
+        return ResponseEntity.ok().body(null);
     }
 
     @Override
     public ResponseEntity<List<ArticleDTO>> getArticles() {
-        // TODO Auto-generated method stub
-        return ArticlesApi.super.getArticles();
+        return ResponseEntity.ok().body(service.findByAuthor(getAuthor()));
     }
 
     @Override
     public ResponseEntity<List<ArticleDTO>> searchArticles(String phrase) {
         // TODO Auto-generated method stub
-        return ArticlesApi.super.searchArticles(phrase);
+        return ResponseEntity.ok().body(
+            List.of(new ArticleDTO()
+                .title("Hello")
+                .author("0x228")
+                .tags(List.of("It", "Prikol"))
+                .text("World!!!!!!!")
+            ));
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteArticle(String id) {
+        service.deleteArticle(id);
+        return ResponseEntity.ok(null);
+    }
+
+    private String getAuthor() {
+        return provider.getAddressFromToken((String) SecurityContextHolder.getContext().getAuthentication().getPrincipal());
     }
 
 }
