# backend/src/main/java/io/github/ctrl_alt_elite/hackathon/model/Article.java
@@ -1,0 +1,67 @@
+package io.github.ctrl_alt_elite.hackathon.model;
+
+import java.util.List;
+
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+
+@Document(collection = "articles")
+public class Article {
+    
+    @Id
+    private String id;
+
+    private String title;
+    private String author;
+    private List<String> tags;
+    private String text;
+
+    public Article() {}
+
+    public Article(String title, String author, List<String> tags, String text) {
+        this.title = title;
+        this.author = author;
+        this.tags = tags;
+        this.text = text;
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public void setTitle(String title) {
+        this.title = title;
+    }
+
+    public String getAuthor() {
+        return author;
+    }
+
+    public void setAuthor(String author) {
+        this.author = author;
+    }
+
+    public List<String> getTags() {
+        return tags;
+    }
+
+    public void setTags(List<String> tags) {
+        this.tags = tags;
+    }
+
+    public String getText() {
+        return text;
+    }
+
+    public void setText(String text) {
+        this.text = text;
+    }
+}
